--- a/jre8/Dockerfile
+++ b/jre8/Dockerfile
@@ -8,8 +8,8 @@ RUN opkg-install curl
 ENV JAVA_VERSION_MAJOR 8
 ENV JAVA_VERSION_MINOR 25
 ENV JAVA_VERSION_BUILD 17
-ENV JAVA_PACKAGE       jdk
-ENV JAVA_CHECKSUM      e145c03a7edc845215092786bcfba77e
+ENV JAVA_PACKAGE       server-jre
+ENV JAVA_CHECKSUM      c3ec171fac394c584a0a5cecb1731efd
 
 # Download and unarchive Java
 RUN curl -kLOH "Cookie: gpw_e24=http%3A%2F%2Fwww.oracle.com%2F; oraclelicense=accept-securebackup-cookie" \
@@ -24,8 +24,6 @@ http://download.oracle.com/otn-pub/java/jdk/${JAVA_VERSION_MAJOR}u${JAVA_VERSION
 # Set environment
 ENV JAVA_HOME /opt/jdk
 ENV PATH ${PATH}:${JAVA_HOME}/bin
-
-VOLUME [ "/opt/jdk"]
 
 ENTRYPOINT ["java"]
 CMD ["-version"]
