--- a/tomcat8-volume/Dockerfile
+++ b/tomcat8-volume/Dockerfile
@@ -2,13 +2,13 @@ FROM progrium/busybox
 MAINTAINER Peter Rossbach <peter.rossbach@bee42.com>
 
 # Install wget
-RUN opkg-install wget ca-certificates
+RUN opkg-install curl
 
 ENV TOMCAT_MINOR_VERSION 8.0.15
 ENV CATALINA_HOME /opt/tomcat
 
-RUN wget -q https://archive.apache.org/dist/tomcat/tomcat-8/v${TOMCAT_MINOR_VERSION}/bin/apache-tomcat-${TOMCAT_MINOR_VERSION}.tar.gz && \
-  wget -qO- https://archive.apache.org/dist/tomcat/tomcat-8/v${TOMCAT_MINOR_VERSION}/bin/apache-tomcat-${TOMCAT_MINOR_VERSION}.tar.gz.md5 | md5sum -c - && \
+RUN curl -O http://archive.apache.org/dist/tomcat/tomcat-8/v${TOMCAT_MINOR_VERSION}/bin/apache-tomcat-${TOMCAT_MINOR_VERSION}.tar.gz && \
+  curl http://archive.apache.org/dist/tomcat/tomcat-8/v${TOMCAT_MINOR_VERSION}/bin/apache-tomcat-${TOMCAT_MINOR_VERSION}.tar.gz.md5 | md5sum -c - && \
   gunzip apache-tomcat-*.tar.gz && \
   tar xf apache-tomcat-*.tar && \
   rm apache-tomcat-*.tar && mv apache-tomcat* ${CATALINA_HOME} && \
